--- a/src/App.css
+++ b/src/App.css
@@ -271,8 +271,16 @@ h6 {
   }
 }
 /*end of services */
-/* featured rooms */
 
+/* Footer*/
+.footer {
+  background-color: var(--darkGrey);
+  width: 100%;
+  height: 100px;
+}
+/* End of Footer*/
+
+/* featured rooms */
 .featured-rooms {
   padding: 5rem 0;
 }
